<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_change_color"
        android:icon="@drawable/ic_baseline_color_lens_24"
        android:title="@string/change_color"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_reminder"
        android:icon="@drawable/ic_baseline_notifications_active_24"
        android:title="@string/reminder"
        app:showAsAction="always"
        android:visible="false"/>
    <item
        android:id="@+id/action_pin"
        android:icon="@drawable/ic_baseline_push_pin_24"
        android:title="@string/pin"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_baseline_share_24"
        android:title="@string/share"
        app:showAsAction="never"
        android:visible="false"/>
    <item
        android:id="@+id/action_to_archive"
        android:icon="@drawable/ic_baseline_archive_24"
        android:title="@string/archive"
        app:showAsAction="never"
        android:visible="false"/>
    <item
        android:id="@+id/action_to_trash"
        android:icon="@drawable/ic_baseline_delete_24"
        android:title="@string/recycle_bin"
        app:showAsAction="never"
        android:visible="false"/>
    <item
        android:id="@+id/action_restore"
        android:icon="@drawable/ic_baseline_emoji_objects_24"
        android:title="@string/restore"
        app:showAsAction="never"
        android:visible="false"/>
    <item
        android:id="@+id/action_completely_delete"
        android:icon="@drawable/ic_baseline_delete_forever_24"
        android:title="@string/completely_delete"
        app:showAsAction="never"
        android:visible="false"/>
</menu>