<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_select_note"
        android:title="@string/select_note"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_select_all"
        android:title="@string/select_all"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_clear_trash"
        android:title="@string/clear_trash"
        app:showAsAction="never"/>
</menu>