<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_undo"
        android:icon="@drawable/ic_baseline_undo_24"
        android:title="@string/undo"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_redo"
        android:icon="@drawable/ic_baseline_redo_24"
        android:title="@string/redo"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_add_check_item"
        android:icon="@drawable/ic_outline_library_add_check_24"
        android:title="@string/add_checkbox"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_add_photo"
        android:icon="@drawable/ic_baseline_add_photo_alternate_24"
        android:title="@string/add_photo"
        app:showAsAction="always"/>
</menu>