<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/radio_background"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.datetimepicker.DateTimePickerDialog">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date_time_picker"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnPickDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="mm/dd/yyyy" />

    <Button
        android:id="@+id/btnPickTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="hh:mm" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/btnConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:text="@string/confirm" />
    </LinearLayout>
</LinearLayout>